# CareBuddy

./: FRONTEND_SETUP.md  POETRY_INSTALL.md  README.md  pyproject.toml  run.sh
backend/: agent_orchestrator.py  app.py  main.py  utils.py
backend/agents/: __init__.py  discovery_agent.py  finalization_agent.py  processing_agent.py  summary_agent.py
backend/resources/: EHR_record.txt
backend/results/output/: analysis_report.txt  results.json
backend/results/output/2026-02-15_17-27-34/: SKILL.md  analysis_report.txt  results.json
backend/results/output/2026-02-15_17-34-18/: SKILL.md  analysis_report.txt  results.json
backend/tools/: __init__.py  parsing_tools.py
frontend/: index.html
